force-app/main/default/objects/CCX_Team_Member__c/CCX_Team_Member__c.object-meta.xml
<CustomObject>
    <label>CCX Team Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>CCX Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>