force-app/main/default/objects/CCX_Team_Member__c/fields/CCX_Role__c.field-meta.xml
<CustomField>
    <fullName>CCX_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX Role</label>
    <referenceTo>CCX_Role__c</referenceTo>
    <relationshipLabel>CCX Team Members</relationshipLabel>
    <relationshipName>CCX_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>