force-app/main/default/objects/CCX_Team_Member__c/fields/CCX_Team__c.field-meta.xml
<CustomField>
    <fullName>CCX_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX Team</label>
    <referenceTo>CCX_Team__c</referenceTo>
    <relationshipLabel>CCX Team Members</relationshipLabel>
    <relationshipName>CCX_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>